--- a/frontend/stylesheets/chai-template/pika-test/exp-result.scss
+++ b/frontend/stylesheets/chai-template/pika-test/exp-result.scss
@@ -11,7 +11,6 @@
       h3{
         margin: 0;
         margin-bottom: 15px;
-        padding-left: 40px;
       }
 
       table{
@@ -19,13 +18,19 @@
         tr{
           &.target-name{
             td{
-              padding: 0 5px;
+              padding: 0;
               border-bottom: none;
 
               h3{
                 margin-top: 30px;
                 padding: 0;
               }
+            }
+          }
+
+          &.tr-header{
+            td{
+              border-bottom: 1px solid #000;
             }
           }
           td{
