--- a/frontend/javascripts/dynexp/pika_test/views/v2/exp-result.html
+++ b/frontend/javascripts/dynexp/pika_test/views/v2/exp-result.html
@@ -37,8 +37,8 @@
                 <img ng-show="result[$index] == 'Invalid'" style="width:20px"  src="/images/Invalid.svg">
               </td>
               <td ng-if="$index >= 2" class="text-center">
-                <img ng-show="result[$index] == 'Positive'" style="width:20px"  src="/images/Positive.svg">
-                <img ng-show="result[$index] == 'Negative'" style="width:20px"  src="/images/Negative.svg">
+                <img ng-show="result[$index] == 'Positive'" style="width:20px"  src="/images/Positive.svg?v=1">
+                <img ng-show="result[$index] == 'Negative'" style="width:20px"  src="/images/Negative.svg?v=1">
                 <img ng-show="result[$index] == 'Inhibited'" style="width:20px"  src="/images/Inhibited.svg">
                 <img ng-show="result[$index] == 'Unknown'" style="width:20px"  src="/images/Inhibited.svg">
                 <img ng-show="result[$index] == 'Invalid'" style="width:20px"  src="/images/Invalid.svg">
@@ -77,8 +77,8 @@
                 <img ng-show="result[$index] == 'Invalid'" style="width:20px"  src="/images/Invalid.svg">
               </td>
               <td ng-if="$index >= 10" class="text-center">
-                <img ng-show="result[$index] == 'Positive'" style="width:20px"  src="/images/Positive.svg">
-                <img ng-show="result[$index] == 'Negative'" style="width:20px"  src="/images/Negative.svg">
+                <img ng-show="result[$index] == 'Positive'" style="width:20px"  src="/images/Positive.svg?v=1">
+                <img ng-show="result[$index] == 'Negative'" style="width:20px"  src="/images/Negative.svg?v=1">
                 <img ng-show="result[$index] == 'Inhibited'" style="width:20px"  src="/images/Inhibited.svg">
                 <img ng-show="result[$index] == 'Unknown'" style="width:20px"  src="/images/Inhibited.svg">
                 <img ng-show="result[$index] == 'Invalid'" style="width:20px"  src="/images/Invalid.svg">
