update header and footer

--- a/frontend/javascripts/app/views/directives/header-status.html
+++ b/frontend/javascripts/app/views/directives/header-status.html
@@ -3,7 +3,7 @@
   <div class="header-bar" ng-if="isLoading()">
     <div class="left-content">
       <div class="menu" ng-transclude></div>
-      <div class="exp-name CH1">Loading <ellipsis-animated></ellipsis-animated></div>
+      <div class="exp-name CX3-B">Loading <ellipsis-animated></ellipsis-animated></div>
     </div>      
   </div>
   <div ng-if="!isLoading()" class="header-bar" ng-class="{'in-progress': state && state !== 'idle' && isCurrentExp, 'complete': experiment && ((experiment.completed_at && !(state !== 'idle' && isCurrentExp)) || (experiment.started_at && !(state !== 'idle' && isCurrentExp)))}" ng-style="backgroundStyle">
@@ -11,67 +11,84 @@
     <!-- begin is valid -->
     <div class="left-content">
       <div class="menu" ng-transclude></div>
-      <div class="exp-name CH1" title="{{experiment.name}}">{{experiment.name}}</div>
+      <div class="exp-name CX3-B" title="{{experiment.name}}">{{experiment.name}}</div>
     </div>
 
     <!-- begin is valid -->
-    <div class="right-content CB1-M" ng-if="experiment.id && !experiment.started_at && !experiment.completed_at && !(statusData.optics.lid_open==='true')&& state==='idle'">
+    <div class="right-content CB2-B" ng-if="experiment.id && !experiment.started_at && !experiment.completed_at && !(statusData.optics.lid_open==='true')&& state==='idle'">
       <button id="start-experiment-button" ng-if="!start_confirm_show" class="button-header begin" ng-click="startConfirm()">Start Experiment</button>
       <button id="start-experiment-button" ng-if="start_confirm_show" class="button-he begin" ng-click="startExperiment()">Confirm Start</button>
     </div>
 
     <!-- begin is invalid LID IS OPEN -->
-    <div class="right-content CB1-M" ng-if="!experiment.started_at && !experiment.completed_at && (statusData.optics.lid_open==='true')">Lid is open</div>
+    <div class="right-content CB2-M text-shadow" ng-if="!experiment.started_at && !experiment.completed_at && (statusData.optics.lid_open==='true')">Lid is open</div>
 
     <!-- begin is invalid ANOTHER EXP RUNNING -->
-    <div class="right-content CB1-M" ng-if="!experiment.started_at && !experiment.completed_at && (state !== 'idle') && !isCurrentExp">
+    <div class="right-content CB2-M text-shadow" ng-if="!experiment.started_at && !experiment.completed_at && (state !== 'idle') && !isCurrentExp">
       Another experiment is running
       <span class="CB1-B ml-10 cursor-pointer" ui-sref="run-experiment({id: statusData.experiment_controller.experiment.id, chart: 'amplification'})">View Now</span>
     </div>
 
     <!-- experiment in progress -->
-    <div class="right-content CB1-M" ng-if="!experiment.completed_at && state !== 'idle' && isCurrentExp">
+    <div class="right-content CB2-M text-shadow" ng-if="!experiment.completed_at && state !== 'idle' && isCurrentExp">
       In Progress...
-      <span class="CB1-M ml-10" ng-if="state !== 'lid_heating'">{{timeRemaining | secondsDisplay: 'display2'}} Remaining</span>
-      <span class="CB1-M ml-10" ng-if="state === 'lid_heating'">Estimating time remaining</span>
+      <span class="CB2-M ml-10" ng-if="state !== 'lid_heating'">{{timeRemaining | secondsDisplay: 'display2'}} Remaining</span>
+      <span class="CB2-M ml-10" ng-if="state === 'lid_heating'">Estimating time remaining</span>
     </div>
 
     <!-- experiment complete - final holding state -->
-    <div class="right-content CB1-M" ng-if="experiment.completed_at && state !== 'idle' && isCurrentExp && !dataAnalysis">
+    <div class="right-content CB2-M text-shadow" ng-if="experiment.completed_at && state !== 'idle' && isCurrentExp && !dataAnalysis">
       Analyzing<ellipsis-animated></ellipsis-animated>  &nbsp;Holding Temperature of {{status.heat_block.temperature | round: 1}} &deg;C
     </div>
-    <div class="right-content CB1-M" ng-if="experiment.completed_at && state !== 'idle' && isCurrentExp && dataAnalysis">
+    <div class="right-content CB2-M text-shadow" ng-if="experiment.completed_at && state !== 'idle' && isCurrentExp && dataAnalysis">
       Experiment Complete, Holding Temperature of {{status.heat_block.temperature | round: 1}}&deg;C
     </div>
 
     <!-- experiment complete - data analyzing -->
-    <div class="right-content CB1-M" ng-if="experiment.completed_at && !(state !== 'idle' && isCurrentExp) && !dataAnalysis && enterState">
+    <div class="right-content CB2-M text-shadow" ng-if="experiment.completed_at && !(state !== 'idle' && isCurrentExp) && !dataAnalysis && enterState">
       Run Complete, Analyzing<ellipsis-animated></ellipsis-animated>
     </div>
 
     <!-- experiment completed successfully -->
-    <div class="right-content CB1-M" ng-if="experiment.completed_at && !(state !== 'idle' && isCurrentExp) && (dataAnalysis || !enterState)">
-      <span ng-if="experiment.completion_status === 'success'">Completed</span>
-      <span ng-if="experiment.completion_status !== 'success'">
-        <span class="failed CB1-M mr-10">Failed</span>
+    <div class="right-content CB2-B" ng-if="experiment.completed_at && !(state !== 'idle' && isCurrentExp) && (dataAnalysis || !enterState)">
+      <span class="completed" ng-if="experiment.completion_status === 'success'">Completed</span>
+      
+      <span class="failed mr-10" ng-if="experiment.completion_status === 'aborted'">User Canceled</span>
+
+      <span 
+        class="failed mr-10" 
+        ng-if="experiment.completion_status !== 'success' && experiment.completion_status !== 'aborted'">
+        Failed
+      </span>
+      <span 
+        ng-if="experiment.completion_status !== 'success' && experiment.completion_status !== 'aborted'"
+        class="button-header-o mr-10" 
+        ng-click="viewError()">
+        View Details
+      </span>
+
+      <button class="button-header ml-10" duplicate-experiment experiment-id="experiment.id">Duplicate Experiment</button>
+
+
+<!--       <span ng-if="experiment.completion_status !== 'success'">
+        <span class="failed CB2-M mr-10">Failed</span>
         <span ng-if="experiment.completion_status === 'aborted'">
           User cancelled
           <span ng-if="experiment.time_valid" >{{experiment.completed_at|date:'MMM. dd yyyy, hh:mm:ss'}}</span>
         </span>
         <span ng-if="experiment.completion_status !== 'aborted'">
           An error occured
-          <span class="CB1-M cursor-pointer" ng-click="viewError()">View Details</span>
+          <span class="CB2-M cursor-pointer" ng-click="viewError()">View Details</span>
         </span>
-      </span>
-      <button class="button-header ml-10" duplicate-experiment experiment-id="experiment.id">Duplicate Experiment</button>
+      </span> -->
+      
     </div>
 
     <!-- experiment has been started and not completed -->
-    <div class="right-content CB1-M" ng-if="experiment && experiment.started_at && !experiment.completed_at && 
+    <div class="right-content CB2-B" ng-if="experiment && experiment.started_at && !experiment.completed_at && 
             !isStarted && !(state !== 'idle' && isCurrentExp) && (dataAnalysis || !enterState)">
-      <span class="failed CB1-M">Failed</span>
-      <span ng-if="experiment.completion_status === 'aborted'">User cancelled</span>
-      <span ng-if="experiment.completion_status !== 'aborted'">An error occured</span>
+      <span class="failed mr-10" ng-if="experiment.completion_status === 'aborted'">User cancelled</span>
+      <span class="failed mr-10" ng-if="experiment.completion_status !== 'aborted'">Failed</span>
       <button class="button-header ml-10" duplicate-experiment experiment-id="experiment.id">Duplicate Experiment</button>
     </div>
   </div>
