minor style fixing

--- a/frontend/stylesheets/chai-template/directives/footer-status-bar.scss
+++ b/frontend/stylesheets/chai-template/directives/footer-status-bar.scss
@@ -41,6 +41,7 @@
       margin-left: 10px;
       border-radius: 2px;
       white-space: nowrap;
+      cursor: pointer;
 
       &.disabled {
         color: $light-gray;
