--- a/frontend/stylesheets/chai-template/directives/footer-status-bar.scss
+++ b/frontend/stylesheets/chai-template/directives/footer-status-bar.scss
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     width: 100%;
+    max-width: 750px;
 
     .experiment-name {
       cursor: pointer;
