add pika kit and melt curve

--- a/frontend/stylesheets/chai-template/fonts.scss
+++ b/frontend/stylesheets/chai-template/fonts.scss
@@ -179,6 +179,12 @@
     line-height: 20px;
   }
 
+  .CX4-M{
+    font-family: 'DINOT--Medium', Arial, sans-serif;
+    font-size: 18px;
+    line-height: 20px;
+  }
+
   .CX5{
     font-family: 'DINOT--Regular', Arial, sans-serif;
     font-size: 15px;
