--- a/frontend/stylesheets/chai-template/pika-test/set-wells.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-wells.scss
@@ -280,6 +280,7 @@
 }
 
 .pika-set-well-active, 
+.pika-set-sample-active, 
 .pika-exp-result-active{
   .modal-backdrop{
     background: transparent !important;
