--- a/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
+++ b/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
@@ -10,6 +10,7 @@ $sidemenu_width_close: 0;
   &.edit-protocol-state-active,
   &.pika-exp-running-active,
   &.pika-set-well-active,
+  &.pika-set-sample-active,
   &.pika-exp-result-active{
     .side-menu-layout{
       &.sidemenu-open{
@@ -188,7 +189,7 @@ $sidemenu_width_close: 0;
 
                 &.hide-elem{
                   position: absolute;
-                  left: 400px;
+                  left: -400px;
                   width: 280px;
                 }
               }
@@ -272,6 +273,11 @@ $sidemenu_width_close: 0;
           label.section-name{
             font-weight: 300;        
             color: $black;
+          }
+
+          .section-sub-name{
+            display: block;
+            margin-bottom: 10px;
           }
 
           &.run-exp {        
