--- a/frontend/stylesheets/chai-template/pika-test/exp-result.scss
+++ b/frontend/stylesheets/chai-template/pika-test/exp-result.scss
@@ -13,6 +13,12 @@
         margin-bottom: 15px;
       }
 
+      .pika-title{
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+      }
+
       table{
         width: 100%;
         tr{
