--- a/frontend/stylesheets/chai-template/pika-test/set-sample.scss
+++ b/frontend/stylesheets/chai-template/pika-test/set-sample.scss
@@ -274,6 +274,12 @@
                 }
               }
 
+              &.button-confirm-exp{
+                background: $link-text-color;
+                color: #fff;
+                border: 1px solid $link-text-color;
+              }
+
             }
           }
         }
