--- a/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
+++ b/frontend/stylesheets/chai-template/directives/side-menu-layout.scss
@@ -110,13 +110,23 @@ $sidemenu_width_close: 0;
 
         .analyze-menu, .property-menu{
           .side-menu-menu-item{
-            border-left: 3px solid transparent;
+            position: relative;
             svg{
               width: 10px;
             }
-            &:hover, &.active{
-              border-left: 3px solid $link-text-color;
+
+            &:before{
+              content: '';
+              position: absolute;
+              border-left: 3px solid transparent;
+              height: 24px;
+              top: 2px;
             }
+
+            &.active::before, &:hover::before{
+              border-color: #df1924;
+            }
+
           }
 
           .side-menu-menu-box{
@@ -153,11 +163,11 @@ $sidemenu_width_close: 0;
 
           .side-menu-menu-item.disabled-link{
             color: #999;
-            &:hover{
+            &:hover::before{
               color: #999 !important;
               background: inherit;
               cursor: default;
-              border-left: 3px solid transparent;
+              border-color: transparent;
             }
           }
         }
