--- a/web/app/views/layouts/application.html.erb
+++ b/web/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title ng-bind="pageTitle || 'ChaiPCR'"></title>
+  <title ng-bind="pageTitle || 'Open qPCR | Chai'"></title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="/stylesheets/application-debug.css" media="all">
   <link rel="shortcut icon" href="favicon.ico?v=4" />
